# gnood

./: AUTHORS  Makefile.in  README  TODO  configure  configure.in  gnood.scr
fonts/: avantgarde-white-bold-10.tga
gfx/: def_layout.tga  gnood.pcx  shooterBase.tga  skin1.tga  test-brick.tga  test-brick2.tga  test-brick3.tga  test-brick4.tga
include/: brick.h  brickFall.h  brickFlight.h  config.h.in  gnood.h  playBoard.h  scoreBoard.h  shooterBoard.h  utils.h
src/: brick.cpp  brickFall.cpp  brickFlight.cpp  gnood.cpp  playBoard.cpp  scoreBoard.cpp  shooterBoard.cpp
